<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#0000FF"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/Anup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/anup"
                android:textColor="@color/btn_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_cli"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_anup"
                android:textColor="#FFFF44"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:text="@string/txt_dept"
                android:textColor="#FFFF44"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_agm"
                android:textColor="#FFFF44"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#00FF00"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/even"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/emon"
                android:textColor="@color/btn_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_cli"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvemon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_emon"
                android:textColor="#FFFF44" />

            <TextView
                android:id="@+id/tvemon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_dept"
                android:textColor="#FFFF44" />

            <TextView
                android:id="@+id/tvemon3 "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_egm"
                android:textColor="#FFFF44" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>