<!-- Drwaer Code Starts -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />
    <!-- Drwaer Code end -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#0000FF"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/morn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/redbus"
                    android:text="@string/morning_bus"
                    android:textColor="@color/btn_red_color" 
                   />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/after"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue"
                    android:text="@string/afternoon_bus "
                    android:textColor="@color/btn_color" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FF00"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/even"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue"
                    android:text="@string/evenning_bus "
                    android:textColor="@color/btn_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/night"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/redbus"
                    android:text="@string/night_bus "
                    android:textColor="@color/btn_red_color" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#117000"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/teacher"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/redbus"
                    android:text="@string/teachers_bus"
                    android:textColor="@color/btn_red_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/weekend"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue"
                    android:text="@string/weekend"
                    android:textColor="@color/btn_color" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>